[metadata]
name = basecmd
version = attr: basecmd.__version__
author = dnknth
description = Logging boilerplate for the command line
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dnknth/basecmd
license = MIT
classifiers =
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries

[options]
packages = find:
include_package_data = True
install_requires =
    setuptools
    ansicolors==1.1.*
    python-decouple==3.*
